<resources>
    <string name="app_name" translatable="true">Patients list</string>
    <string name="desc_firebase_lockup" translatable="true">logo and name</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="title_activity_main" translatable="true">Main</string>
    <string name="action_logout" translatable="true">Logout</string>
    <string name="title_activity_detail" translatable="true">Details</string>
    <string name="log_in_text" translatable="true">Sign in to get the most out of your device.</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="pref_title_display_name">Display title</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notif</string>
    <string name="custom_message">Dear Sir or Madam: </string>
    <string name="title_custom_text_settings">Message text</string>
    <string name="back">Back</string>
    <string name="display_title_text_key" translatable="false">DisplayName</string>
    <string name="custom_message_text_key" translatable="false">my_custom_text</string>
    <string name="confirmation_dialog_delete">Delete contact?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_edit_details">Edit</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="log_in" translatable="false">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %s</string>
    <string name="label_emailpassword" translatable="false">Email/Password Authentication</string>
    <string name="required">Required.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="note_hint">Note</string>
    <string name="return_date_hint">Return date</string>
    <string name="need_email">We sent you an email at %s</string>
    <string name="ChoseEmailClient">ChoseEmailClient</string>
    <string name="have_account">I already have an account</string>
    <string name="next_button_text">next</string>
    <string name="account_email">Account email</string>
    <string name="account_password">Account password</string>
    <string name="preference_file_key">com.alboteanu.myappicationdata.PREFERENCE_FILE_KEY</string>
    <string name="action_campaign">Promotional campaign</string>
    <string name="text_button_send_emails">Emails to all</string>
    <string name="text_button_send_to_exprired">Send sms to expired</string>
    <string name="text_button_send_email_to_exprired">Send emails to expired</string>
    <string name="action_email">Email</string>
    <string name="action_sms">Message</string>
    <string name="action_select_none">Select none</string>
    <string name="action_select_all">Select all</string>
    <string name="over_6_months">6 months</string>
    <string name="banner_id">ca-app-pub-3931793949981809/3604469576</string>
    <string name="title_activity_settings2">Settings2Activity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings4">SettingsActivity4</string>

</resources>
