<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alboteanu.mylist.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:text="@string/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:text="@string/action_select_all"
        android:title="@string/action_select_all"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_none"
        android:orderInCategory="100"
        android:text="@string/action_select_none"
        android:title="@string/action_select_none"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:text="@string/action_email"
        android:title="@string/action_email"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sms"
        android:orderInCategory="100"
        android:text="@string/action_sms"
        android:title="@string/action_sms"
        android:visible="true"
        app:showAsAction="never" />


    <!-- <item
         android:id="@+id/action_set_alarm"
         android:orderInCategory="100"
         android:title="Set alarm"
         app:showAsAction="never" />-->

    <!-- <item
         android:id="@+id/action_merge_with_google"
         android:orderInCategory="100"
         android:title="Merge with Google"
         app:showAsAction="never" />-->

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:text="@string/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
