<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alboteanu.mylist.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:text="@string/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:text="@string/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_campaign"
        android:orderInCategory="100"
        android:text="@string/action_campaign"
        android:title="@string/action_campaign"
        app:showAsAction="never" />


</menu>
