<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".login.ActivityEmailSignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_100"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <!--
        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

            </android.support.design.widget.AppBarLayout>

            -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:theme="@style/ThemeOverlay.MyTitleText" />

            <ImageView
                style="@style/ThemeOverlay.FirebaseIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@mipmap/logo" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/log_in_text"
                android:theme="@style/ThemeOverlay.MyTextDetail" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_300"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">


            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:visibility="gone"/>


            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minWidth="160dp"
                android:text="@string/log_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />


            <TextView
                android:id="@+id/create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/create_account"
                android:textColor="@color/colorAccent" />





        </LinearLayout>


    </LinearLayout>

</ScrollView>