<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditActivity"
    tools:showIn="@layout/activity_edit">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?android:attr/listPreferredItemPaddingStart">

        <TableRow android:gravity="center_vertical">

            <ImageView
                android:layout_gravity="center"
                android:contentDescription="face"
                android:padding="16dp"
                android:src="@drawable/ic_action_person" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_weight="1"
                android:hint="@string/name_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />

        </TableRow>

        <TableRow android:gravity="center_vertical">

            <ImageView
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_action_phone" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_weight="1"
                android:hint="@string/phone_hint"
                android:inputType="phone" />
        </TableRow>

        <TableRow android:gravity="center_vertical">

            <ImageView
                android:layout_gravity="center"
                android:contentDescription="icon email"
                android:padding="16dp"
                android:src="@drawable/ic_action_email" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_weight="1"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow android:gravity="center_vertical">

            <ImageView

                android:contentDescription="icon pen"
                android:padding="16dp"
                android:src="@drawable/ic_action_note" />


            <EditText
                android:id="@+id/noteEditText"
                android:layout_weight="1"
                android:hint="@string/note_hint"
                android:inputType="textMultiLine"
                android:maxLines="4" />
        </TableRow>

        <TableRow android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_sandglass_edit_activity"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="sandglass icon"
                android:padding="16dp"
                android:src="@drawable/ic_action_sandglass" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_action_drop_down"
                android:focusable="false"
                android:hint="@string/return_date_hint"
                android:inputType="none"

                />

            <ImageView
                android:id="@+id/button_clear_date"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="clear date icon"
                android:padding="16dp"
                android:src="@drawable/ic_action_delete" />

        </TableRow>

    </TableLayout>

</ScrollView>