<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".login.CreateEmailActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@mipmap/logo" />

        <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
        android:hint="@string/hint_email"
        android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minWidth="160dp"
        android:text="@string/next_button_text"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/field_email"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="78dp"
            android:text="@string/account_email"
            android:theme="@style/ThemeOverlay.MyTitleText" />-->

    </LinearLayout>
</ScrollView>