<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.CreateEmailActivity"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<RelativeLayout
    android:id="@+id/activity_create_account_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:text="@string/next_button_text"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/field_email"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_email"
        android:theme="@style/ThemeOverlay.MyTitleText"
        android:layout_marginBottom="78dp"
        android:id="@+id/textView"
        android:layout_above="@+id/field_email"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
</ScrollView>